# cognitive_robotics_ws

./: README.md  matlab_plots_parser.py  multi_plot.py  setup_all_required_packages.sh  setup_bashrc.sh
src/race_perception_packages/colormap_utils/: CMakeLists.txt  package.xml
src/race_perception_packages/colormap_utils/src/: colormap_utils.cpp
src/race_perception_packages/race_feature_extraction/: CMakeLists.txt  package.xml
src/race_perception_packages/race_feature_extraction/launch/: bringup_vfh.launch  test_pdbnodelet_node.launch  test_pdbnodelet_nodelet.launch
src/race_perception_packages/race_feature_extraction/pcd/: obj2.pcd  obj3.pcd  obj7.pcd  obj9.pcd
src/race_perception_packages/race_feature_extraction/src/: feature_extraction.cpp  feature_extraction_node.cpp  spin_image.cpp
src/race_perception_packages/race_object_conceptualizer/: CMakeLists.txt  package.xml
src/race_perception_packages/race_object_conceptualizer/launch/: bringup.launch  node_launch.launch  nodelet_launch.launch
src/race_perception_packages/race_object_conceptualizer/msg/: UserObjectLabel.msg
src/race_perception_packages/race_object_conceptualizer/src/: node_object_conceptualizer.cpp  object_conceptualization.cpp  object_conceptualization.cpp~  object_conceptualizer.cpp  test_object_conceptualizer_functions.cpp
src/race_perception_packages/race_object_descriptor/: CMakeLists.txt  kill.sh  package.xml
src/race_perception_packages/race_object_descriptor/launch/: nodelet_manager.launch  race_object_descriptor.launch
src/race_perception_packages/race_object_descriptor/params/: default_params.yaml
src/race_perception_packages/race_object_descriptor/pcd/: obj0.pcd  obj4.pcd
src/race_perception_packages/race_object_descriptor/src/: object_descriptor.cpp  object_descriptor_functionality.cpp  object_descriptor_node.cpp
src/race_perception_packages/race_object_descriptor_deep_learning/: CMakeLists.txt  GOOD_descriptor_bagfile.sh  package.xml
src/race_perception_packages/race_object_descriptor_deep_learning/launch/: bringup.launch  bringup.launch~
src/race_perception_packages/race_object_descriptor_deep_learning/pcd/: obj1.pcd  obj5.pcd  obj8.pcd
src/race_perception_packages/race_object_descriptor_deep_learning/src/: feature_extraction_node.cpp~  object_descriptor.cpp~  object_descriptor_deep_learning.cpp  object_descriptor_deep_learning_functionality.cpp  object_descriptor_deep_learning_node.cpp  object_descriptor_functionality.cpp~  object_descriptor_node.cpp~  spin_image.cpp~
src/race_perception_packages/race_perception_db/: CMakeLists.txt  package.xml
src/race_perception_packages/race_perception_db/launch/: bringup.launch  bringup_pdbtest.launch  perception_db_node.launch
src/race_perception_packages/race_perception_db/msg/: MsgTest.msg  Slice.msg
src/race_perception_packages/race_perception_db/params/: default_params.yaml
src/race_perception_packages/race_perception_db/src/: pdb_tutorial.cpp  perception_db.cpp  perception_db_node.cpp  perception_db_nodelet.h  report_db_continuous.cpp
src/race_perception_packages/race_perception_db/srv/: Delete.srv  Get.srv  GetAllObjectCat.srv  GetKeys.srv  GetPDBReport.srv  GetRTOV.srv  GetRTOVs.srv  GetSITOVs.srv  LastNodeID.srv  Put.srv  get_db_address.srv
src/race_perception_packages/race_perception_utils/: CMakeLists.txt  package.xml
src/race_perception_packages/race_perception_utils/cfg/: kinect_calibration.vcg
src/race_perception_packages/race_perception_utils/launch/: kinect_calibration.launch  pr2_navigation.vcg  test.launch
src/race_perception_packages/race_perception_utils/msg/: CallbackTime.msg  Cycle.msg  MeasureCycle.msg  MeasurePDB.msg
src/race_perception_packages/race_perception_utils/nodes/: draw_spatial_relations.py  filter4perceptions.py
src/race_perception_packages/race_perception_utils/pcd/: unknown_2013-10-07-10-27-36.pcd  unknown_2013-10-07-10-27-40.pcd  unknown_2013-10-07-10-28-20.pcd
src/race_perception_packages/race_perception_utils/src/: Y2D4.cpp  callbacks.h  callbacks_mht.cpp  cycle.cpp  graph_wrapper.cpp  gvplugin_xgtk.cpp  kinect_static_tf.cpp  measure_cycle.cpp  object_perception_system_manager.cpp  point_head.cpp  print.cpp  test_print.cpp  test_uuid.cpp  test_wait_for_tf.cpp  tf_wrapper.cpp  write_object_pcd.cpp
src/race_perception_packages/race_topic_modeling_services/: CMakeLists.txt  package.xml
src/race_perception_packages/race_topic_modeling_services/launch/: bringup.launch
src/race_perception_packages/race_topic_modeling_services/src/: HDP_service.py  LDA_service.py  local_HDP_service.py  local_LDA_service.py  read.me  template_service.py
src/race_perception_packages/race_topic_modeling_services/srv/: topic_modelling.srv
src/race_system_msgs/race_msgs/: CMakeLists.txt  package.xml
src/race_system_msgs/race_msgs/action/: ExecuteTask.action  Planning.action
src/race_system_msgs/race_msgs/msg/: AffordanceException.msg  Atom.msg  BlackboardResponse.msg  ConfidenceList.msg  DispatchedActionInfo.msg  DurationList.msg  ExecuteTaskAction.msg  ExecuteTaskActionFeedback.msg  ExecuteTaskActionGoal.msg  ExecuteTaskActionResult.msg  ExecuteTaskFeedback.msg  ExecuteTaskGoal.msg  ExecuteTaskResult.msg  ExecutionPredicateInfo.msg  ExperienceHeader.msg  ExperienceTail.msg  FlexibleTimepoint.msg  Fluent.msg  FluentArray.msg  FluentNameArray.msg  FluentNameTranslation.msg  LabeledBoundingBoxMarker.msg  ObjectDetection.msg  ObjectDetectionArray.msg  ObjectHypothesis.msg  ObjectRecognition.msg  Operator.msg  ParamList.msg  Plan.msg  PlanningAction.msg  PlanningActionFeedback.msg  PlanningActionGoal.msg  PlanningActionResult.msg  PlanningFeedback.msg  PlanningGoal.msg  PlanningResult.msg  Property.msg  PropertyTypeDescription.msg  RobotState.msg  SceneLayoutLabel.msg  (+7 more)
src/race_system_msgs/race_perception_msgs/: CMakeLists.txt  package.xml
src/student_ws/rug_deep_feature_extraction/: CMakeLists.txt  package.xml
src/student_ws/rug_kfold_cross_validation/: CMakeLists.txt  CV_train_instances.txt  package.xml
src/student_ws/rug_simulated_user/: CMakeLists.txt  package.xml
(+143 files in other folders)
