<?xml version="1.0"?>
<package>
	<name>colormap_utils</name>
	<version>1.10.0</version>
	<description>colormap_utils</description>
	<author email="kasaei.hamidreza@gmail.com">hamidreza</author>
	<maintainer email="kasaei.hamidreza@gmail.com">hamidreza</maintainer>

	<license>BSD</license>  
	<url type="website">https://hkasaei.github.io/</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>	
	<build_depend>sensor_msgs</build_depend>
	<build_depend>rviz</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>rviz</run_depend>

</package>

