<?xml version="1.0"?>
<package>
	<name>race_perception_db</name>
	<version>1.10.0</version>
	<description>race_perception_db</description>
	<author email="kasaei.hamidreza@gmail.com">hamidreza</author>
	<maintainer email="kasaei.hamidreza@gmail.com">hamidreza</maintainer>

	<license>BSD</license>  
	<url type="website">https://hkasaei.github.io/</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>race_perception_msgs</build_depend>
	<build_depend>race_perception_utils</build_depend>
	<build_depend>nodelet</build_depend>
	<build_depend>actionlib</build_depend>
 	<build_depend>message_generation</build_depend>


	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>race_perception_msgs</run_depend>
	<run_depend>race_perception_utils</run_depend>
	<run_depend>nodelet</run_depend>
	<run_depend>actionlib</run_depend>
 	<run_depend>message_runtime</run_depend>

</package>
