<package>
  <name>race_msgs</name>
  <version>0.10.0</version>
  <description>Messages, services and actions used by race</description>
  <author email="kasaei.hamidreza@gmail.com">hamidreza</author>
  <maintainer email="kasaei.hamidreza@gmail.com">hamidreza</maintainer>

  <license>BSD</license>  
  <url type="website">https://hkasaei.github.io/</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>actionlib_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend>


</package>
